# internal/controller/role_controller.go
@@ -46,3 +46,28 @@ func (rc *RoleController) GetRoleInfo(c *gin.Context) {
 	rc.ReturnSuccess(c, util.PublicSuccess, data)
 
 }
+
+// @Summary 添加角色
+// @Tags Role
+// @Accept x-www-form-urlencoded
+// @Produce json
+// @Param name formData string true "角色名称"
+// @Router /role/add [post]
+func (rc *RoleController) AddRole(c *gin.Context) {
+	name := c.PostForm("name")
+	if name == "" {
+		rc.ReturnFail(c, util.PublicParamsNull, nil)
+	}
+	status, err := strconv.Atoi(c.PostForm("status"))
+	if err != nil {
+		rc.ReturnFail(c, util.PublicParamsNull, nil)
+	}
+	data, err := rc.RoleService.AddRole(&model.Role{
+		Name:   name,
+		Status: status,
+	})
+	if err != nil {
+		rc.ReturnFail(c, util.PublicError, err)
+	}
+	rc.ReturnSuccess(c, util.PublicSuccess, data)
+}
